changes made in the code of initial etl

--- a/Intialetl.ipynb
+++ b/Intialetl.ipynb
@@ -1,62 +1,170 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "1971fc16",
-   "metadata": {},
-   "source": [
-    "Create a Spark Session"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "1971fc16",
+      "metadata": {
+        "id": "1971fc16"
+      },
+      "source": [
+        "# Create a Spark Session"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "id": "d0e80f53",
+      "metadata": {
+        "id": "d0e80f53",
+        "outputId": "6cf328b2-703e-4e19-8f33-0be670904f19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+-----------+--------+------+---------------+--------+--------------+\n",
+            "|     Date|Time(Local)|Eyeballs|Zeroes|Completed_Trips|Requests|Unique_Drivers|\n",
+            "+---------+-----------+--------+------+---------------+--------+--------------+\n",
+            "|10-Sep-12|          7|       5|     0|              2|       2|             9|\n",
+            "|10-Sep-12|          8|       6|     0|              2|       2|            14|\n",
+            "|10-Sep-12|          9|       8|     3|              0|       0|            14|\n",
+            "|10-Sep-12|         10|       9|     2|              0|       1|            14|\n",
+            "|10-Sep-12|         11|      11|     1|              4|       4|            11|\n",
+            "+---------+-----------+--------+------+---------------+--------+--------------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import *\n",
+        "from pyspark.sql.functions import max, min, avg, col, count, date_format\n",
+        "\n",
+        "# Create a SparkSession\n",
+        "spark = SparkSession.builder.appName(\"UberDataAnalysis\").getOrCreate()\n",
+        "\n",
+        "# Load the dataset into a DataFrame\n",
+        "uber_df = spark.read.csv(\"uber.csv\", header=True, inferSchema=True)\n",
+        "uber_df.show(5)  # Display the first 5 rows of the DataFrame"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "6e3ee476",
+      "metadata": {
+        "id": "6e3ee476"
+      },
+      "source": [
+        "# Which date had most completed trips during 3 week period"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "id": "cb2751f7",
+      "metadata": {
+        "id": "cb2751f7",
+        "outputId": "b53c8b67-59ed-438c-a99f-c70713b21bf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+--------------------+\n",
+            "|     Date|sum(Completed_Trips)|\n",
+            "+---------+--------------------+\n",
+            "|11-Sep-12|                  40|\n",
+            "|13-Sep-12|                  47|\n",
+            "|18-Sep-12|                  42|\n",
+            "|21-Sep-12|                 190|\n",
+            "|12-Sep-12|                  91|\n",
+            "|19-Sep-12|                  41|\n",
+            "|14-Sep-12|                 305|\n",
+            "|16-Sep-12|                 150|\n",
+            "|23-Sep-12|                 111|\n",
+            "|24-Sep-12|                   4|\n",
+            "|22-Sep-12|                 248|\n",
+            "|20-Sep-12|                  70|\n",
+            "|10-Sep-12|                  26|\n",
+            "+---------+--------------------+\n",
+            "\n",
+            "14-Sep-12\n"
+          ]
+        }
+      ],
+      "source": [
+        "completed_trips=uber_df.groupBy(\"Date\").sum(\"Completed_Trips\")\n",
+        "completed_trips.show()\n",
+        "\n",
+        "most_completed_trips=completed_trips.orderBy(\"sum(Completed_Trips)\",ascending=False).select(\"Date\").first()[\"Date\"]\n",
+        "print(most_completed_trips)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# What was the highest number of completed trips within a 24-hour period?"
+      ],
+      "metadata": {
+        "id": "yZjaJzqkVDtw"
+      },
+      "id": "yZjaJzqkVDtw"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Group the data by 24-hour window\n",
+        "completed_trips_by_window=uber_df.groupBy(window(\"Time(Local)\",\"24 hours\"))#2.agg(sum(\"Completed_Trips\").alias(\"total_completed_trips\")).orderBy(\"total_completed_trips\",ascending=False)\n",
+        "completed_trips_by_window.show()"
+      ],
+      "metadata": {
+        "id": "y6ee6otdVM7j",
+        "outputId": "a2f23186-9a0e-4560-ba1c-5c2ba386d3e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "id": "y6ee6otdVM7j",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'GroupedData' object has no attribute 'show'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-46c7946fbd34>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Group the data by 24-hour window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcompleted_trips_by_window\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muber_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupBy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwindow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Time(Local)\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"24 hours\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#.agg(sum(\"Completed_Trips\").alias(\"total_completed_trips\")).orderBy(\"total_completed_trips\",ascending=False)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcompleted_trips_by_window\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'GroupedData' object has no attribute 'show'"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.11.9"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0e80f53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import max, min, avg, col, count, date_format\n",
-    "\n",
-    "# Create a SparkSession\n",
-    "spark = SparkSession.builder.appName(\"UberDataAnalysis\").getOrCreate()\n",
-    "\n",
-    "# Load the dataset into a DataFrame\n",
-    "uber_df = spark.read.csv(\"uber.csv\", header=True, inferSchema=True)\n",
-    "uber_df.show(5)  # Display the first 5 rows of the DataFrame"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e3ee476",
-   "metadata": {},
-   "source": [
-    "Which date had most completed trips during 3 week period"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb2751f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "completed_trips_df=uber"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.9"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
