Deleted unwanted commands

--- a/Intialetl.ipynb
+++ b/Intialetl.ipynb
@@ -12,11 +12,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "id": "d0e80f53",
       "metadata": {
         "id": "d0e80f53",
-        "outputId": "6cf328b2-703e-4e19-8f33-0be670904f19",
+        "outputId": "a8895286-995c-485f-a5c6-65794b332588",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -65,11 +65,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 2,
       "id": "cb2751f7",
       "metadata": {
         "id": "cb2751f7",
-        "outputId": "b53c8b67-59ed-438c-a99f-c70713b21bf5",
+        "outputId": "17357948-1cd3-4b3b-d741-58f347430906",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -120,32 +120,159 @@
       "id": "yZjaJzqkVDtw"
     },
     {
-      "cell_type": "code",
       "source": [
         "#Group the data by 24-hour window\n",
-        "completed_trips_by_window=uber_df.groupBy(window(\"Time(Local)\",\"24 hours\"))#2.agg(sum(\"Completed_Trips\").alias(\"total_completed_trips\")).orderBy(\"total_completed_trips\",ascending=False)\n",
-        "completed_trips_by_window.show()"
+        "from pyspark.sql.functions import to_timestamp, hour, window\n",
+        "\n",
+        "# Corrected the column name from 'Time (Local)' to 'Time(Local)'\n",
+        "uber_df_updated = uber_df.withColumn(\n",
+        "    'Time(Local)',\n",
+        "    to_timestamp(to_date(col('Date'),'dd-MMM-yy')) + make_interval(hours=hour(col('Time(Local)')))\n",
+        ")\n",
+        "uber_df_updated.show()\n",
+        "# Corrected column name in window function to 'Time(Local)'\n",
+        "completed_trips_by_window = uber_df_updated \\\n",
+        "    .groupBy(window(\"Time(Local)\", \"24 hours\")) \\\n",
+        "    .agg(sum(\"Completed_Trips\").alias(\"Total Completed Trips\")) \\\n",
+        "    .orderBy(\"Total Completed Trips\", ascending=False)\n",
+        "\n",
+        "highest_completed_trips_in_24_hours = completed_trips_by_window \\\n",
+        "    .select(\"Total Completed Trips\") \\\n",
+        "    .first()[\"Total Completed Trips\"]\n",
+        "\n",
+        "print(highest_completed_trips_in_24_hours)"
       ],
+      "cell_type": "code",
       "metadata": {
-        "id": "y6ee6otdVM7j",
-        "outputId": "a2f23186-9a0e-4560-ba1c-5c2ba386d3e1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oWQzdaVn1Trt",
+        "outputId": "01243b71-d362-4bf1-b074-8ea32cf9f4e3"
       },
-      "id": "y6ee6otdVM7j",
-      "execution_count": 12,
+      "id": "oWQzdaVn1Trt",
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'GroupedData' object has no attribute 'show'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-46c7946fbd34>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Group the data by 24-hour window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcompleted_trips_by_window\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muber_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupBy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwindow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Time(Local)\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"24 hours\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#.agg(sum(\"Completed_Trips\").alias(\"total_completed_trips\")).orderBy(\"total_completed_trips\",ascending=False)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcompleted_trips_by_window\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'GroupedData' object has no attribute 'show'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+-------------------+--------+------+---------------+--------+--------------+\n",
+            "|     Date|        Time(Local)|Eyeballs|Zeroes|Completed_Trips|Requests|Unique_Drivers|\n",
+            "+---------+-------------------+--------+------+---------------+--------+--------------+\n",
+            "|10-Sep-12|2012-09-10 07:00:00|       5|     0|              2|       2|             9|\n",
+            "|10-Sep-12|2012-09-10 08:00:00|       6|     0|              2|       2|            14|\n",
+            "|10-Sep-12|2012-09-10 09:00:00|       8|     3|              0|       0|            14|\n",
+            "|10-Sep-12|2012-09-10 10:00:00|       9|     2|              0|       1|            14|\n",
+            "|10-Sep-12|2012-09-10 11:00:00|      11|     1|              4|       4|            11|\n",
+            "|10-Sep-12|2012-09-10 12:00:00|      12|     0|              2|       2|            11|\n",
+            "|10-Sep-12|2012-09-10 13:00:00|       9|     1|              0|       0|             9|\n",
+            "|10-Sep-12|2012-09-10 14:00:00|      12|     1|              0|       0|             9|\n",
+            "|10-Sep-12|2012-09-10 15:00:00|      11|     2|              1|       2|             7|\n",
+            "|10-Sep-12|2012-09-10 16:00:00|      11|     2|              3|       4|             6|\n",
+            "|10-Sep-12|2012-09-10 17:00:00|      12|     2|              3|       4|             4|\n",
+            "|10-Sep-12|2012-09-10 18:00:00|      11|     1|              3|       4|             7|\n",
+            "|10-Sep-12|2012-09-10 19:00:00|      13|     2|              2|       3|             7|\n",
+            "|10-Sep-12|2012-09-10 20:00:00|      11|     1|              0|       0|             5|\n",
+            "|10-Sep-12|2012-09-10 21:00:00|      11|     0|              1|       1|             3|\n",
+            "|10-Sep-12|2012-09-10 22:00:00|      16|     3|              0|       2|             4|\n",
+            "|10-Sep-12|2012-09-10 23:00:00|      21|     5|              3|       3|             4|\n",
+            "|11-Sep-12|2012-09-11 00:00:00|       9|     3|              1|       1|             3|\n",
+            "|11-Sep-12|2012-09-11 01:00:00|       3|     2|              0|       1|             3|\n",
+            "|11-Sep-12|2012-09-11 02:00:00|       1|     1|              0|       0|             1|\n",
+            "+---------+-------------------+--------+------+---------------+--------+--------------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "305\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Which hour of the day had the most requests during the two-week period?"
+      ],
+      "metadata": {
+        "id": "ZZajLzijg1FD"
+      },
+      "id": "ZZajLzijg1FD"
+    },
+    {
+      "source": [
+        "hourly_requests = uber_df_updated.groupBy(hour(\"Time(Local)\").alias(\"hour\")).agg(sum(\"Requests\").alias(\"total_requests\")).orderBy(\"total_requests\", ascending=False)\n",
+        "most_requested_hour = hourly_requests.select(\"hour\").first()[0]\n",
+        "print(\"The hour with the most requests is:\", most_requested_hour)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bvh506YE2PfN",
+        "outputId": "a0a692fb-c813-43bb-9d97-f8077bc8b164"
+      },
+      "id": "Bvh506YE2PfN",
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The hour with the most requests is: 23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#What percentages of all zeroes during the two-week period occurred on weekends (Friday at 5 pm to Sunday at 3 am)?"
+      ],
+      "metadata": {
+        "id": "U9LHvreQ2Y0Z"
+      },
+      "id": "U9LHvreQ2Y0Z"
+    },
+    {
+      "source": [
+        "from pyspark.sql.functions import col, hour, dayofweek, when, to_date\n",
+        "\n",
+        "# Cast 'Date' column to date type\n",
+        "uber_df_updated = uber_df_updated.withColumn(\"Date\", to_date(col(\"Date\"), \"dd-MMM-yy\"))\n",
+        "\n",
+        "weekend_zeros = uber_df_updated.filter(\n",
+        "    (\n",
+        "        (dayofweek(col(\"Date\")) == 6) & (hour(col(\"Time(Local)\")) >= 17)  # Friday 5 pm onwards\n",
+        "        | (dayofweek(col(\"Date\")) == 7)  # Saturday all day\n",
+        "        | ((dayofweek(col(\"Date\")) == 1) & (hour(col(\"Time(Local)\")) < 3))  # Sunday until 3 am\n",
+        "    )\n",
+        ").agg(\n",
+        "    sum(when(col(\"Zeroes\").isNotNull(), col(\"Zeroes\")).otherwise(0)).alias(\"weekend_zeros\")\n",
+        ").collect()[0][\"weekend_zeros\"]\n",
+        "\n",
+        "total_zeros = uber_df_updated.agg(sum(\"Zeroes\").alias(\"total_zeros\")).collect()[0][\"total_zeros\"]\n",
+        "\n",
+        "percent_weekend_zeros = (weekend_zeros / total_zeros) * 100 if total_zeros else 0  # Handle division by zero\n",
+        "\n",
+        "print(\"The percentage of zeros that occurred on weekends is:\", percent_weekend_zeros, \"%\")"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0s4aiBE_4QCd",
+        "outputId": "3436a055-5227-44c0-fac3-a265e223f8a9"
+      },
+      "id": "0s4aiBE_4QCd",
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The percentage of zeros that occurred on weekends is: 38.20853743876837 %\n"
           ]
         }
       ]
